--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -1,4 +1,11 @@
-.searchbar {
-  width: 50%;
-  margin: 10% auto;
+@media (min-width: 700px) {
+  .searchbar {
+    width: 50%;
+    margin: 10% auto;
+  }
+}
+@media (max-width: 699px) {
+  .searchbar {
+    margin: 10% 30px;
+  }
 }
