--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -8,6 +8,12 @@
   .login-card {
     width: 100%;
     height: auto;
+    margin: 50px auto;
+  }
+  .logo-title {
+    width: 100%;
+    display: block;
+    margin: 10px auto;
   }
 }
 
@@ -18,5 +24,10 @@
   }
   .form-body {
     padding: 5px 30px;
+  }
+  .logo-title {
+    width: 50%;
+    display: block;
+    margin: 10px auto;
   }
 }
