--- a/client/src/components/Layout/Layout.css
+++ b/client/src/components/Layout/Layout.css
@@ -1,11 +1,11 @@
 .main-content {
-  background-color: peachpuff;
+  background-color: #f1f2eb;
   min-height: 100vh;
   width: 100%;
 }
 @media (max-width: 700px) {
   .main-content {
-    background-color: peachpuff;
+    background-color: #f1f2eb;
     min-height: 100vh;
   }
 }
